// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImportContentsView /> should render an expanded block correctly 1`] = `
<table
  class="border-brand-gray w-full border"
  data-testid="BlockVehicleJourneysTable::table"
  id="SUMMER_SCHEDULES_Week day service"
>
  <thead
    class="[&>tr>th]:border [&>tr>th]:border-light-grey"
  >
    <tr>
      <th
        class="w-1/6 bg-brand py-2 px-6 text-left text-white"
        data-testid="BlockVehicleJourneysTable::title"
      >
        Week day service
      </th>
      <th
        class="border-l border-l-white bg-white py-2 px-4 text-left text-hsl-dark-80"
        colspan="4"
      >
        <div
          class="flex flex-row flex-1 items-center justify-between font-normal"
          title=""
        >
          <p
            data-testid="BlockVehicleJourneysTable::vehicleType"
          >
            Kalustotyyppi - Mini B
          </p>
          <button
            aria-controls="SUMMER_SCHEDULES_Week day service"
            aria-expanded="true"
            class="text-center "
            data-testid="BlockVehicleJourneysTable::toggleShowTable"
            title="Piilota lohkon SUMMER_SCHEDULES_Week day service tiedot"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="text-3xl text-tweaked-brand text-brand text-[50px] pointer-events-none inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
              />
            </svg>
          </button>
        </div>
      </th>
    </tr>
    <tr
      class="bg-white [&>th]:px-5 [&>th]:py-2 [&>th]:text-left [&>th]:font-normal"
      data-testid="BlockVehicleJourneysTable::vehicleJourneyHeaders"
    >
      <th>
        Tunnus
      </th>
      <th>
        Päivätyyppi
      </th>
      <th>
        Lähtöaika
      </th>
      <th>
        Päättymisaika
      </th>
      <th>
        Sopimusnumero
      </th>
    </tr>
  </thead>
  <div>
    <tbody>
      <tr
        class="even:bg-white [&>td]:border [&>td]:border-light-grey [&>td]:px-5 [&>td]:py-2"
        data-testid="VehicleJourneyRow::35::outbound"
      >
        <td>
          <div
            class="flex flex-row items-center font-bold"
            title=""
          >
            <span
              class="relative flex h-9 w-9 items-center justify-center bg-brand text-2xl font-bold text-white mr-2 h-5 w-5 text-base"
              data-testid="DirectionBadge::container"
              title="1 - Keskustasta pois"
            >
              <span
                data-testid="DirectionBadge::outbound"
              >
                1
              </span>
            </span>
            35
          </div>
        </td>
        <td
          data-testid="VehicleJourneyRow::dateTypeName"
        >
          Maanantai - Perjantai
        </td>
        <td
          data-testid="VehicleJourneyRow::startTime"
        >
          15:00
        </td>
        <td
          data-testid="VehicleJourneyRow::endTime"
        >
          15:25
        </td>
        <td
          data-testid="VehicleJourneyRow::contractNumber"
        >
          CONTRACT_1
        </td>
      </tr>
      <tr
        class="even:bg-white [&>td]:border [&>td]:border-light-grey [&>td]:px-5 [&>td]:py-2"
        data-testid="VehicleJourneyRow::35::inbound"
      >
        <td>
          <div
            class="flex flex-row items-center font-bold"
            title=""
          >
            <span
              class="relative flex h-9 w-9 items-center justify-center bg-brand text-2xl font-bold text-white mr-2 h-5 w-5 text-base"
              data-testid="DirectionBadge::container"
              title="2 - Keskustaan päin"
            >
              <span
                data-testid="DirectionBadge::inbound"
              >
                2
              </span>
            </span>
            35
          </div>
        </td>
        <td
          data-testid="VehicleJourneyRow::dateTypeName"
        >
          Maanantai - Perjantai
        </td>
        <td
          data-testid="VehicleJourneyRow::startTime"
        >
          15:30
        </td>
        <td
          data-testid="VehicleJourneyRow::endTime"
        >
          15:55
        </td>
        <td
          data-testid="VehicleJourneyRow::contractNumber"
        >
          CONTRACT_1
        </td>
      </tr>
      <tr
        class="even:bg-white [&>td]:border [&>td]:border-light-grey [&>td]:px-5 [&>td]:py-2"
        data-testid="VehicleJourneyRow::35::outbound"
      >
        <td>
          <div
            class="flex flex-row items-center font-bold"
            title=""
          >
            <span
              class="relative flex h-9 w-9 items-center justify-center bg-brand text-2xl font-bold text-white mr-2 h-5 w-5 text-base"
              data-testid="DirectionBadge::container"
              title="1 - Keskustasta pois"
            >
              <span
                data-testid="DirectionBadge::outbound"
              >
                1
              </span>
            </span>
            35
          </div>
        </td>
        <td
          data-testid="VehicleJourneyRow::dateTypeName"
        >
          Maanantai - Perjantai
        </td>
        <td
          data-testid="VehicleJourneyRow::startTime"
        >
          16:00
        </td>
        <td
          data-testid="VehicleJourneyRow::endTime"
        >
          16:25
        </td>
        <td
          data-testid="VehicleJourneyRow::contractNumber"
        >
          CONTRACT_1
        </td>
      </tr>
    </tbody>
  </div>
</table>
`;

exports[`<ImportContentsView /> should render correctly 1`] = `
<DocumentFragment>
  <div
    class="space-y-3"
  >
    <h2>
      Tiedoston sisältö
    </h2>
    <div
      data-testid="VehicleScheduleFrameBlocksView::frameBlocks::SUMMER_SCHEDULES"
    >
      <div
        class="flex flex-row border-brand-gray w-full border text-white"
        title=""
      >
        <p
          class="flex w-1/6 items-center border border-light-grey bg-brand py-2 px-6 font-bold"
          data-testid="VehicleScheduleFrameBlocksView::frameLabel"
        >
          SUMMER_SCHEDULES
        </p>
        <div
          class="flex flex-row flex-1 border border-l border-light-grey border-l-white bg-brand py-2 px-4"
          title=""
        >
          <div
            class="flex flex-row flex-1 items-center justify-between font-normal"
            title=""
          >
            <p
              data-testid="VehicleScheduleFrameBlocksView::validityTimeRangeText"
            >
              1.6.2023 - 31.8.2023 | 2 autokiertoa
            </p>
            <button
              aria-controls="SUMMER_SCHEDULESBlocks"
              aria-expanded="true"
              class="text-center "
              data-testid="VehicleScheduleFrameBlocksView::toggleShowTable"
              title="Piilota aikataulun SUMMER_SCHEDULES lohkot"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="text-3xl text-tweaked-brand text-white text-[50px] pointer-events-none inline text-center"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div>
        <div
          class="my-4 space-y-4"
          id="SUMMER_SCHEDULESBlocks"
        >
          <table
            class="border-brand-gray w-full border"
            data-testid="BlockVehicleJourneysTable::table"
            id="SUMMER_SCHEDULES_Week day service"
          >
            <thead
              class="[&>tr>th]:border [&>tr>th]:border-light-grey"
            >
              <tr>
                <th
                  class="w-1/6 bg-brand py-2 px-6 text-left text-white"
                  data-testid="BlockVehicleJourneysTable::title"
                >
                  Week day service
                </th>
                <th
                  class="border-l border-l-white bg-white py-2 px-4 text-left text-hsl-dark-80"
                  colspan="4"
                >
                  <div
                    class="flex flex-row flex-1 items-center justify-between font-normal"
                    title=""
                  >
                    <p
                      data-testid="BlockVehicleJourneysTable::vehicleType"
                    >
                      Kalustotyyppi - Mini B
                    </p>
                    <button
                      aria-controls="SUMMER_SCHEDULES_Week day service"
                      aria-expanded="false"
                      class="text-center "
                      data-testid="BlockVehicleJourneysTable::toggleShowTable"
                      title="Näytä lohkon SUMMER_SCHEDULES_Week day service tiedot"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="text-3xl text-tweaked-brand text-brand text-[50px] pointer-events-none inline text-center"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                        />
                      </svg>
                    </button>
                  </div>
                </th>
              </tr>
            </thead>
          </table>
          <table
            class="border-brand-gray w-full border"
            data-testid="BlockVehicleJourneysTable::table"
            id="SUMMER_SCHEDULES_Saturday service"
          >
            <thead
              class="[&>tr>th]:border [&>tr>th]:border-light-grey"
            >
              <tr>
                <th
                  class="w-1/6 bg-brand py-2 px-6 text-left text-white"
                  data-testid="BlockVehicleJourneysTable::title"
                >
                  Saturday service
                </th>
                <th
                  class="border-l border-l-white bg-white py-2 px-4 text-left text-hsl-dark-80"
                  colspan="4"
                >
                  <div
                    class="flex flex-row flex-1 items-center justify-between font-normal"
                    title=""
                  >
                    <p
                      data-testid="BlockVehicleJourneysTable::vehicleType"
                    >
                      Kalustotyyppi - Mini B
                    </p>
                    <button
                      aria-controls="SUMMER_SCHEDULES_Saturday service"
                      aria-expanded="false"
                      class="text-center "
                      data-testid="BlockVehicleJourneysTable::toggleShowTable"
                      title="Näytä lohkon SUMMER_SCHEDULES_Saturday service tiedot"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="text-3xl text-tweaked-brand text-brand text-[50px] pointer-events-none inline text-center"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                        />
                      </svg>
                    </button>
                  </div>
                </th>
              </tr>
            </thead>
          </table>
        </div>
      </div>
    </div>
    <div
      data-testid="VehicleScheduleFrameBlocksView::frameBlocks::AUTUMN_SCHEDULES"
    >
      <div
        class="flex flex-row border-brand-gray w-full border text-white"
        title=""
      >
        <p
          class="flex w-1/6 items-center border border-light-grey bg-brand py-2 px-6 font-bold"
          data-testid="VehicleScheduleFrameBlocksView::frameLabel"
        >
          AUTUMN_SCHEDULES
        </p>
        <div
          class="flex flex-row flex-1 border border-l border-light-grey border-l-white bg-brand py-2 px-4"
          title=""
        >
          <div
            class="flex flex-row flex-1 items-center justify-between font-normal"
            title=""
          >
            <p
              data-testid="VehicleScheduleFrameBlocksView::validityTimeRangeText"
            >
              1.9.2023 - 31.12.2023 | 1 autokiertoa
            </p>
            <button
              aria-controls="AUTUMN_SCHEDULESBlocks"
              aria-expanded="true"
              class="text-center "
              data-testid="VehicleScheduleFrameBlocksView::toggleShowTable"
              title="Piilota aikataulun AUTUMN_SCHEDULES lohkot"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="text-3xl text-tweaked-brand text-white text-[50px] pointer-events-none inline text-center"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div>
        <div
          class="my-4 space-y-4"
          id="AUTUMN_SCHEDULESBlocks"
        >
          <table
            class="border-brand-gray w-full border"
            data-testid="BlockVehicleJourneysTable::table"
            id="AUTUMN_SCHEDULES_Sunday service"
          >
            <thead
              class="[&>tr>th]:border [&>tr>th]:border-light-grey"
            >
              <tr>
                <th
                  class="w-1/6 bg-brand py-2 px-6 text-left text-white"
                  data-testid="BlockVehicleJourneysTable::title"
                >
                  Sunday service
                </th>
                <th
                  class="border-l border-l-white bg-white py-2 px-4 text-left text-hsl-dark-80"
                  colspan="4"
                >
                  <div
                    class="flex flex-row flex-1 items-center justify-between font-normal"
                    title=""
                  >
                    <p
                      data-testid="BlockVehicleJourneysTable::vehicleType"
                    >
                      Kalustotyyppi - Mini A
                    </p>
                    <button
                      aria-controls="AUTUMN_SCHEDULES_Sunday service"
                      aria-expanded="false"
                      class="text-center "
                      data-testid="BlockVehicleJourneysTable::toggleShowTable"
                      title="Näytä lohkon AUTUMN_SCHEDULES_Sunday service tiedot"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="text-3xl text-tweaked-brand text-brand text-[50px] pointer-events-none inline text-center"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                        />
                      </svg>
                    </button>
                  </div>
                </th>
              </tr>
            </thead>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
